objects/vlocity_ins__ProviderNetworkFormularyDrugPrice__c.object
<CustomObject>
    <description>Represents a health network&apos;s negotiated price for a formulary drug at a pharmacy. Master-detail child object of ProviderNetwork.</description>
    <fields>
        <fullName>vlocity_ins__DiscountAmount__c</fullName>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DiscountPercent__c</fullName>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DosageForm__c</fullName>
        <formula>TEXT(vlocity_ins__FormularyDrugId__r.vlocity_ins__DrugId__r.vlocity_ins__DosageForm__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dosage Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DrugName__c</fullName>
        <formula>IF(vlocity_ins__FormularyDrugId__r.vlocity_ins__DrugId__r.vlocity_ins__TradeName__c!=&quot;&quot;, vlocity_ins__FormularyDrugId__r.vlocity_ins__DrugId__r.vlocity_ins__TradeName__c, vlocity_ins__FormularyDrugId__r.vlocity_ins__DrugId__r.vlocity_ins__GenericName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormularyDrugId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Formulary Drug</label>
        <referenceTo>vlocity_ins__FormularyDrug__c</referenceTo>
        <relationshipLabel>Provider Network Formulary Drugs Price</relationshipLabel>
        <relationshipName>ProviderNetworkFormularyDrugsPrice</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NegotiatedPrice__c</fullName>
        <label>Negotiated Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderAccountId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Provider Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Provider Network Formulary Drugs Price</relationshipLabel>
        <relationshipName>ProviderNetworkFormularyDrugsPrice</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProviderNetworkId__c</fullName>
        <label>Provider Network</label>
        <referenceTo>vlocity_ins__ProviderNetwork__c</referenceTo>
        <relationshipLabel>Provider Network Formulary Drugs Price</relationshipLabel>
        <relationshipName>ProviderNetworkFormularyDrugsPrice</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Provider Network Formulary Drug Price</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Network Formulary Drug Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider Network Formulary Drugs Price</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>